Import of RJBS/Email-Valid-0.172 from CPAN.
gitpan-cpan-distribution: Email-Valid
gitpan-cpan-version:      0.172
gitpan-cpan-path:         RJBS/Email-Valid-0.172.tar.gz
gitpan-cpan-author:       RJBS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Email::Valid.
 
+0.172   Sat Jun 10 2006
+        add pod tests
+
 0.171   Sat Jun 10 2006
         fixed a problem with the test plan
 
