Import of RJBS/Email-Valid-0.173 from CPAN.
gitpan-cpan-distribution: Email-Valid
gitpan-cpan-version:      0.173
gitpan-cpan-path:         RJBS/Email-Valid-0.173.tar.gz
gitpan-cpan-author:       RJBS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Email::Valid.
 
+0.173   Fri Jun 17 2006
+        update test to require same min. version of TLD.pm as code
+
 0.172   Sat Jun 10 2006
         add pod tests
 
