--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Email::Valid.
 
+0.175   Sat Jun 24 2006
+        attempt to improve nslookup-location on Cygwin
+
 0.174   Fri Jun 17 2006
         added module required on Win32 (IO::CaptureOutput) to Makefile.PL
 
